<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Sky Rider Control</string>
    <string name="autosave_arg_ch">Auto save params</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_ch">Cancel</string>
    <string name="confirm">Delete</string>
    <string name="connecting_camera">Connecting...</string>
    <string name="control_protocol_ch">Control protocol</string>
    <string name="current_protocol_ch">Current Protocol</string>
    <string name="delete_ch">Delete</string>
    <string name="edit_ch">Edit</string>
    <string name="flight_arg_ch">Flight Params</string>
    <string name="fpv_info">FPV Info</string>
    <string name="hint_back">back</string>
    <string name="hint_delete_files">Are you sure you want to delete all the selected files?</string>
    <string name="hint_fpv_notconnected">Please connect to the drone</string>
    <string name="hint_photo_saved">Photo saved!</string>
    <string name="hint_video_saved">Video saved!</string>
    <string name="instruction_en">Instruction</string>
    <string name="intruction_ch">Instructions</string>
    <string name="inverse_ch">Inverse</string>
    <string name="media_ch">Media</string>
    <string name="pictures_ch">PHOTO</string>
    <string name="reset_arg_ch">Reset params</string>
    <string name="reset_success">Reset Success</string>
    <string name="right_hand_mode_ch">Right-handed Mode</string>
    <string name="search_menu_title">Search</string>
    <string name="select_all_ch">All</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ui_setting_ch">Interface Params</string>
    <string name="version_ch">"Ver "</string>
    <string name="videos_ch">VIDEO</string>
</resources>
