<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/navigation_bar" android:background="#ff00b7ee" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <ImageView android:id="@id/back" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:src="@drawable/back_no_bg_pressed" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/version_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="0.0.0" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/version_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_ch" android:layout_toLeftOf="@id/version_code" android:layout_centerVertical="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/navigation_bar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:gravity="center_vertical" android:id="@id/flight_arg_title_bar" android:background="#ffd8d8d8" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="@string/flight_arg_ch" />
            <RelativeLayout android:id="@id/autosave_bar" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:textSize="16.0sp" android:id="@id/text_autosave_arg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/autosave_arg_ch" android:layout_centerVertical="true" />
                <Switch android:id="@id/autosave_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:thumb="@drawable/thumb" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:track="@drawable/track" android:switchMinWidth="20.0dip" />
            </RelativeLayout>
            <View android:background="#ffe8e8e8" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:id="@id/reset_flight_arg" android:background="?android:selectableItemBackground" android:paddingLeft="10.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/reset_arg_ch" />
            <TextView android:textStyle="bold" android:gravity="center_vertical" android:id="@id/ui_setting_title" android:background="#ffd8d8d8" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="@string/ui_setting_ch" />
            <RelativeLayout android:id="@id/ui_setting_bar" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:textSize="16.0sp" android:id="@id/text_right_hand_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/right_hand_mode_ch" android:layout_centerVertical="true" />
                <Switch android:id="@id/right_hand_mode_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:thumb="@drawable/thumb" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:track="@drawable/track" android:switchMinWidth="20.0dip" />
            </RelativeLayout>
            <TextView android:textStyle="bold" android:gravity="center_vertical" android:id="@id/control_protocol_title" android:background="#ffd8d8d8" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="@string/control_protocol_ch" />
            <RelativeLayout android:id="@id/control_protocol_bar" android:background="?android:selectableItemBackground" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/current_protocol_ch" android:layout_centerVertical="true" />
                <TextView android:textSize="16.0sp" android:id="@id/protocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="PVTM" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:background="#ffe8e8e8" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>